* Boards were misaligned in the ignore boards section. (Profile-Modify.php, Profile template, index.css, rtl.css, compat.css) [Bug 3876]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@9201 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -2756,15 +2756,18 @@ div#profile_success
 #ignoreboards
 {
 	overflow: auto;
-}
-
-#ignoreboards li
-{
-	list-style: none;
 	margin: 0;
 	padding: 0;
+}
+#ignoreboards li.category
+{
+	list-style: none;
 	float: left;
 	width: 49%;
+}
+#ignoreboards li.board
+{
+	list-style: none;
 }
 
 #theme_settings
