--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -188,14 +188,6 @@ em
 {
 	clear: both;
 }
-.clear_left
-{
-	clear: left;
-}
-.clear_right
-{
-	clear: right;
-}
 
 /* Default font sizes: small (8pt), normal (10pt), and large (14pt). */
 .smalltext, tr.smalltext th
@@ -2931,15 +2923,18 @@ div#profile_success
 #ignoreboards
 {
 	overflow: auto;
-}
-
-#ignoreboards li
-{
-	list-style: none;
 	margin: 0;
 	padding: 0;
+}
+#ignoreboards li.category
+{
+	list-style: none;
 	float: left;
 	width: 49%;
+}
+#ignoreboards li.board
+{
+	list-style: none;
 }
 
 #theme_settings
